# WeatherCLi

./: .gitignore  CMakeLists.txt  README.md  README_ZH.md  config.example.json  main.cpp  main.qml  weatherbackend.cpp  weatherbackend.h
